# typeBuddy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
assets/excerpts/: black_holes.txt  harry_potter_1.txt  star_wars_1.txt  star_wars_2.txt  star_wars_3.txt  theory_relativity.txt
src/: cli.rs  excerpts.rs  game.rs  game_state.rs  game_text.rs  main.rs  plotter.rs  statistics.rs  symbols.rs  terminal.rs  timer.rs
src/excerpts/: theory_relativity.txt
