[package]
name = "type_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"]}
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
termion = "2.0.1"
