[package]
name = "type_buddy"
version = "1.1.0"
edition = "2021"
authors = ["Mitchel Wijt <mitchel@wijt.net>"]
license = "MIT"
description = "This CLI will help you improve your typing accuracy and speed! Improve your personal bests and look back on your previous records in a graph. All in the convenience of your own terminal!"
readme = "README.md"
homepage = "https://github.com/MitchWijt/typeBuddy"
repository = "https://github.com/MitchWijt/typeBuddy"
keywords = ["cli", "typing", "type-accuracy", "type-speed", "learning"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"]}
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
termion = "2.0.1"
